fix(#3): try fix scrollbar

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -23,10 +23,11 @@ html:has(.modal[open]),
 body:has(.modal[open]) {
   /* overflow: hidden; */
   /* touch-action: none; */
-
+  scrollbar-gutter: stable;
   position: fixed;
   height: 100vh;
 }
+
 
 
 * {
